// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert Renders default 1`] = `null`;

exports[`Alert Renders visible 1`] = `
<div
  className="a-overlay a-overlay--dark"
>
  <div
    className="m-alert"
  >
    <button
      className="a-button-transparent m-alert__close has-icon"
      onClick={[Function]}
      style={undefined}
      type="button"
    >
       
      <i
        className="fa fa-close"
      />
    </button>
    <h5
      className="u-margin-bottom-xs"
    >
      Jest Testing
    </h5>
    <p
      className="u-margin-bottom"
    >
      Message
    </p>
    <div
      className="m-alert__actions"
    >
      <button
        className="a-button-outline a-button--small m-alert__cancel"
        onClick={[Function]}
        style={undefined}
        type="button"
      >
         
        Cancel
      </button>
      <button
        className="a-button a-button--small m-alert__ok"
        onClick={[Function]}
        style={undefined}
        type="button"
      >
         
        OK
      </button>
    </div>
  </div>
</div>
`;

exports[`Alert Renders visible, danger 1`] = `
<div
  className="a-overlay a-overlay--dark"
>
  <div
    className="m-alert m-alert--danger"
  >
    <button
      className="a-button-transparent a-button--danger m-alert__close has-icon"
      onClick={[Function]}
      style={undefined}
      type="button"
    >
       
      <i
        className="fa fa-close"
      />
    </button>
    <h5
      className="u-margin-bottom-xs"
    >
      Jest Testing
    </h5>
    <p
      className="u-margin-bottom"
    >
      Message
    </p>
    <div
      className="m-alert__actions"
    >
      <button
        className="a-button-outline a-button--danger a-button--small m-alert__cancel"
        onClick={[Function]}
        style={undefined}
        type="button"
      >
         
        Cancel
      </button>
      <button
        className="a-button a-button--danger a-button--small m-alert__ok"
        onClick={[Function]}
        style={undefined}
        type="button"
      >
         
        OK
      </button>
    </div>
  </div>
</div>
`;

exports[`Alert Renders visible, danger, with onOk 1`] = `
<div
  className="a-overlay a-overlay--dark"
>
  <div
    className="m-alert m-alert--danger"
  >
    <button
      className="a-button-transparent a-button--danger m-alert__close has-icon"
      onClick={[Function]}
      style={undefined}
      type="button"
    >
       
      <i
        className="fa fa-close"
      />
    </button>
    <h5
      className="u-margin-bottom-xs"
    >
      Jest Testing
    </h5>
    <p
      className="u-margin-bottom"
    >
      Message
    </p>
    <div
      className="m-alert__actions"
    >
      <button
        className="a-button-outline a-button--danger a-button--small m-alert__cancel"
        onClick={[Function]}
        style={undefined}
        type="button"
      >
         
        Cancel
      </button>
      <button
        className="a-button a-button--danger a-button--small m-alert__ok"
        onClick={[Function]}
        style={undefined}
        type="button"
      >
         
        OK
      </button>
    </div>
  </div>
</div>
`;

exports[`Alert Renders visible, danger, with onOk and onCancel 1`] = `
<div
  className="a-overlay a-overlay--dark"
>
  <div
    className="m-alert m-alert--danger"
  >
    <button
      className="a-button-transparent a-button--danger m-alert__close has-icon"
      onClick={[Function]}
      style={undefined}
      type="button"
    >
       
      <i
        className="fa fa-close"
      />
    </button>
    <h5
      className="u-margin-bottom-xs"
    >
      Jest Testing
    </h5>
    <p
      className="u-margin-bottom"
    >
      Message
    </p>
    <div
      className="m-alert__actions"
    >
      <button
        className="a-button-outline a-button--danger a-button--small m-alert__cancel"
        onClick={[Function]}
        style={undefined}
        type="button"
      >
         
        Cancel
      </button>
      <button
        className="a-button a-button--danger a-button--small m-alert__ok"
        onClick={[Function]}
        style={undefined}
        type="button"
      >
         
        OK
      </button>
    </div>
  </div>
</div>
`;

exports[`Alert Renders visible, primary 1`] = `
<div
  className="a-overlay a-overlay--dark"
>
  <div
    className="m-alert m-alert--primary"
  >
    <button
      className="a-button-transparent a-button--primary m-alert__close has-icon"
      onClick={[Function]}
      style={undefined}
      type="button"
    >
       
      <i
        className="fa fa-close"
      />
    </button>
    <h5
      className="u-margin-bottom-xs"
    >
      Jest Testing
    </h5>
    <p
      className="u-margin-bottom"
    >
      Message
    </p>
    <div
      className="m-alert__actions"
    >
      <button
        className="a-button-outline a-button--primary a-button--small m-alert__cancel"
        onClick={[Function]}
        style={undefined}
        type="button"
      >
         
        Cancel
      </button>
      <button
        className="a-button a-button--primary a-button--small m-alert__ok"
        onClick={[Function]}
        style={undefined}
        type="button"
      >
         
        OK
      </button>
    </div>
  </div>
</div>
`;

exports[`Alert Renders visible, warning 1`] = `
<div
  className="a-overlay a-overlay--dark"
>
  <div
    className="m-alert m-alert--warning"
  >
    <button
      className="a-button-transparent a-button--warning m-alert__close has-icon"
      onClick={[Function]}
      style={undefined}
      type="button"
    >
       
      <i
        className="fa fa-close"
      />
    </button>
    <h5
      className="u-margin-bottom-xs"
    >
      Jest Testing
    </h5>
    <p
      className="u-margin-bottom"
    >
      Message
    </p>
    <div
      className="m-alert__actions"
    >
      <button
        className="a-button-outline a-button--warning a-button--small m-alert__cancel"
        onClick={[Function]}
        style={undefined}
        type="button"
      >
         
        Cancel
      </button>
      <button
        className="a-button a-button--warning a-button--small m-alert__ok"
        onClick={[Function]}
        style={undefined}
        type="button"
      >
         
        OK
      </button>
    </div>
  </div>
</div>
`;
